# processr

./: Cargo.toml  shell.nix
src/: data.rs  error.rs  lib.rs  prelude.rs  procedure.rs  selector.rs
src/parser/: css.rs  html.rs  image.rs  mod.rs  template.rs
src/parser/markdown/: extension.rs  mod.rs
src/parser/markdown/extension/: default.rs  extra.rs  mod.rs
src/procedure/: mod.rs  util.rs
src/procedure/parser/: markdown.rs  mod.rs
src/procedure/parser/markdown/: ast.rs  mod.rs  parser.rs  util.rs
src/procedure/parser/markdown/extension/: default.rs  extra.rs  mod.rs
src/procedure/parser/template/: mod.rs
test/: test.md  test.out.txt
