[package]
name = "processr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
chumsky = "0.10.1"
clap = { version = "4.5.40", features = ["derive"] }
dom_query = "0.19.2"
fronma = "0.2.0"
html-escape = "0.2.13"
image = "0.25.6"
lightningcss = { version = "1.0.0-alpha.67" }
mime_guess = "2.0.5"
minify-html = "0.16.4"
pathdiff = "0.2.3"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha-rs = "0.1.0"
tera = "1.20.0"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde"] }
wildmatch = "2.4.0"
